--- a/demo-ast/index.html
+++ b/demo-ast/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>ast 学习</title>
   </head>
   <body>
     <div id="app">
