feat: 用于 第04期：ast 学习笔记 代码演示

--- a/demo-ast/index.html
+++ b/demo-ast/index.html
@@ -6,9 +6,9 @@
     <title>ast 学习</title>
   </head>
   <body>
-    <div id="app">
-      <h1>ast 学习</h1>
-    </div>
-    <script type="module" src="/src/main.ts"></script>
+    <!-- Vue 挂载容器 -->
+    <div id="app"></div>
+    <!-- 入口文件 -->
+    <script type="module" src="./src/main.ts"></script>
   </body>
 </html>
